1. 新增 Profile 頁面，加入授權驗證，需登入，才能夠訪問。2. 限制商品管理頁面僅 admin 使用者才能夠進入。 3. 新增 Profile 頁面顯示詳細使用者註冊資訊。4. 新增更新使用者 Profile 資訊。 5. 新增變更密碼頁面與實作功能。 6. 新增忘記密碼頁面，以及建立重設密碼連結。 7. 使用 MailKit/Gmail 寄送重設密碼連結。8. 新增修改密碼頁面與實作其功能，讓使用者能夠修改密碼。

--- a/BestStoreMVC/appsettings.json
+++ b/BestStoreMVC/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Smtp": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "User": "todosender000@gmail.com", // 你的 Gmail 帳號
+    "Pass": "zizv cayw bsqc pmje", // 上面取得的 16 碼 App Password
+    "UseStartTls": true // Gmail 建議用 587 + STARTTLS
+  },
   "AllowedHosts": "*"
 }
