--- a/BestStoreMVC/appsettings.json
+++ b/BestStoreMVC/appsettings.json
@@ -15,5 +15,8 @@
     "Pass": "zizv cayw bsqc pmje", // 上面取得的 16 碼 App Password
     "UseStartTls": true // Gmail 建議用 587 + STARTTLS
   },
+  "CartSetting": {
+    "ShippingFee": 6.5
+  },
   "AllowedHosts": "*"
 }
