1. 補上一個 commit 未提交的檔案。

--- a/BestStoreMVC/appsettings.json
+++ b/BestStoreMVC/appsettings.json
@@ -18,5 +18,10 @@
   "CartSetting": {
     "ShippingFee": 6.5
   },
+  "PaypalSettings": {
+    "ClientId": "AYChFFy_Ky_WCvtTHvhLO7QQN30-ZTlkKHt0PM8NpzMq5YiaZiDr_VjElioEje0Xit3ThLfB8bdDI4Nh",
+    "Secret": "ENHbZVvJ6n6ZCOhjAQXDVcnpksiCc8x_5u1Nf9poB8LrzLTyr7Ki63jA07mf-TULlqGjYsdQvGGvd_pR",
+    "Url": "https://api-m.sandbox.paypal.com"
+  },
   "AllowedHosts": "*"
 }
