1. 忽略發佈產生的 Release 相關文件。

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@
 /BestStoreMVC/obj
 /BestStoreMVC_structure.txt
 /Refactoring.md
+/BestStoreMVC/.config
+/BestStoreMVC/bin/Release/net8.0
+/BestStoreMVC/Properties/PublishProfiles
+/BestStoreMVC/BestStoreMVC.csproj.user
+/BestStoreMVC/BestStoreMVC.csproj.user
