1. 新增 mssql 容器，並設定資料卷與環境變數。2. 將 web 容器設定為依賴 mssql 容器，確保啟動順序正確。3. 調整 web 容器的網路設定，讓其能與 mssql 容器通訊。4. 在 web 容器中新增環境變數檔案設定。5. 修改 ASP.NET Core 應用程式的程式碼，在啟動時自動執行資料庫遷移（migrations）。6. 更新應用程式的連線字串，讓其能連接到 mssql 容器中的資料庫。7. 更新 .gitignore 檔案，忽略資料卷與日誌檔案，以避免將敏感資料提交到版本控制系統中。

--- a/.env
+++ b/.env
@@ -27,3 +27,16 @@ DOTNET_HTTP_EXPOSE_PORT=5000
 DOTNET_HTTP_INNER_PORT=5000
 DOTNET_HTTPS_EXPOSE_PORT=5001
 DOTNET_HTTPS_INNER_PORT=5001
+
+# MSSQL
+MSSQL_BACKUP_PATH=/var/opt/mssql/data_backup
+MSSQL_EULA=Y
+MSSQL_SA_USER=sa
+MSSQL_SA_PASSWORD=Seraph964375
+# MSSQL_PID=Express
+MSSQL_PID=Developer
+MSSQL_HOST_IP=172.89.0.32
+MSSQL_VERSION=2022-latest
+MSSQL_INNER_PORT=1433
+MSSQL_OUTER_PORT=1436
+MSSQL_COLLATION=Chinese_Taiwan_Stroke_CI_AS
