--- a/.env
+++ b/.env
@@ -8,6 +8,25 @@ NETWORK_NAME=beststoremvc_net
 NETWORK_SUBNET=172.89.0.0/16
 NETWORK_GATEWAY=172.89.0.1
 
+# Nginx
+NGINX_IMAGE_VERSION=1.23.3
+# Set all containers timezone
+NGINX_TIME_ZONE=Asia/Taipei
+# Refers to localedef -A /usr/share/locale/locale.alias
+NGINX_LANG_NAME=en_US.utf8
+# Refers to localedef -i en_US
+NGINX_LANG_INPUTFILE=en_US
+# Refers to localedef -f UTF-8
+NGINX_LANG_CHARMAP=UTF-8
+# Refers to tzdata
+NGINX_DEBIAN_FRONTEND=noninteractive
+NGINX_HOST_IP=172.89.0.30
+NGINX_HTTP_EXPOSE_PORT=80
+NGINX_HTTP_INNER_PORT=80
+NGINX_HTTPS_EXPOSE_PORT=443
+NGINX_HTTPS_INNER_PORT=443
+
+
 # Dotnet core of ubuntu
 # ASPNETCORE_ENVIRONMENT=Development
 ASPNETCORE_ENVIRONMENT=Production
@@ -27,6 +46,7 @@ DOTNET_HTTP_EXPOSE_PORT=5000
 DOTNET_HTTP_INNER_PORT=5000
 DOTNET_HTTPS_EXPOSE_PORT=5001
 DOTNET_HTTPS_INNER_PORT=5001
+
 
 # MSSQL
 MSSQL_BACKUP_PATH=/var/opt/mssql/data_backup
