1. 重構 Controller，加入三層式架構。

--- a/BestStoreMVC/appsettings.json
+++ b/BestStoreMVC/appsettings.json
@@ -1,11 +1,13 @@
 {
-    "ConnectionStrings": {
-        // "DefaultConnection": "Server=.;Database=BestStoreDb;User Id=sa;Password=Seraph964375;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
-        // 這是給 Docker 訪問本地端的 MSSQL 用的連線字串
-        // "DefaultConnection": "Server=host.docker.internal;Database=BestStoreDb;User Id=sa;Password=Seraph964375;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
-        // 這是給 Docker 訪問容器內的 MSSQL 用的連線字串
-        "DefaultConnection": "Server=mssql,1433;Database=BestStoreDb;User Id=sa;Password=Seraph964375;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
-    },
+  "ConnectionStrings": {
+     //"DefaultConnection": "Server=.;Database=BestStoreDb;User Id=sa;Password=Seraph964375;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    // 這是給 Docker 訪問本地端的 MSSQL 用的連線字串
+    // "DefaultConnection": "Server=host.docker.internal;Database=BestStoreDb;User Id=sa;Password=Seraph964375;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    // 這是給 Docker 訪問容器內的 MSSQL 用的連線字串
+    "DefaultConnection": "Server=mssql,1433;Database=BestStoreDb;User Id=sa;Password=Seraph964375;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    // 這是給本地端訪問容器內的 MSSQL 用的連線字串
+    //"DefaultConnection": "Server=.,1436;Database=BestStoreDb;User Id=sa;Password=Seraph964375;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
