1. 顯示 Paypal 付款後傳回的詳細 JSON 資訊。 2. 修正運費未在購物車結帳畫面顯示的問題。 3. docker-compose 修正 web 服務，僅開放內部通信埠號給容器連接。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,9 +51,9 @@ services:
         environment:
             - DOTNET_LANG_NAME=${DOTNET_LANG_NAME}
             - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
-        ports:
+        # ports:
             # - ${DOTNET_HTTP_EXPOSE_PORT}:${DOTNET_HTTP_INNER_PORT}
-            - ${DOTNET_HTTPS_EXPOSE_PORT}:${DOTNET_HTTPS_INNER_PORT}
+            # - ${DOTNET_HTTPS_EXPOSE_PORT}:${DOTNET_HTTPS_INNER_PORT}
         expose:
             # - ${DOTNET_HTTP_EXPOSE_PORT}
             - ${DOTNET_HTTPS_EXPOSE_PORT}
