--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -196,8 +196,8 @@ jobs:
         # 依賴關係：等待建置和測試作業完成
         needs: [build-and-test]
 
-        # 條件：只在推送到 main 分支時執行
-        if: github.ref == 'refs/heads/main'
+        # 條件：暫時禁用部署（需要設置 Secrets）
+        if: false
 
         # 作業步驟
         steps:
@@ -211,14 +211,19 @@ jobs:
               with:
                   dotnet-version: ${{ env.DOTNET_VERSION }}
 
-            # 步驟 3: 發布應用程式
+            # 步驟 3: 還原 NuGet 套件
+            - name: Restore dependencies
+              run: dotnet restore ${{ env.PROJECT_NAME }}/${{ env.PROJECT_NAME }}.csproj
+              working-directory: ${{ github.workspace }}
+
+            # 步驟 4: 發布應用程式
             - name: Publish application
               # 執行 dotnet publish 命令
               run: dotnet publish ${{ env.PROJECT_NAME }}/${{ env.PROJECT_NAME }}.csproj --configuration ${{ env.BUILD_CONFIGURATION }} --output ./publish --no-restore
               # 工作目錄：指定執行命令的目錄
               working-directory: ${{ github.workspace }}
 
-            # 步驟 4: 上傳發布檔案
+            # 步驟 5: 上傳發布檔案
             - name: Upload publish artifacts
               # 使用動作上傳發布檔案
               uses: actions/upload-artifact@v4
@@ -228,23 +233,11 @@ jobs:
                   path: ./publish
                   retention-days: 1
 
-            # 步驟 5: 部署到測試環境
-            - name: Deploy to staging environment
-              # 使用 SSH 部署到測試伺服器
-              run: |
-                  # 建立部署腳本
-                  echo "#!/bin/bash" > deploy.sh
-                  echo "cd /var/www/beststore-staging" >> deploy.sh
-                  echo "git pull origin main" >> deploy.sh
-                  echo "dotnet build --configuration Release" >> deploy.sh
-                  echo "sudo systemctl restart beststore-staging" >> deploy.sh
-                  chmod +x deploy.sh
-
-                  # 執行部署腳本
-                  ssh ${{ secrets.STAGING_SSH_USER }}@${{ secrets.STAGING_SERVER }} 'bash -s' < deploy.sh
-              # 環境變數：SSH 金鑰
-              env:
-                  SSH_PRIVATE_KEY: ${{ secrets.STAGING_SSH_KEY }}
+            # 步驟 6: 部署到測試環境（已禁用）
+            # - name: Deploy to staging environment
+            #   run: |
+            #       echo "Deployment disabled - SSH secrets not configured"
+            #   continue-on-error: true
 
     # 部署到生產環境作業
     deploy-production:
@@ -272,7 +265,12 @@ jobs:
               with:
                   dotnet-version: ${{ env.DOTNET_VERSION }}
 
-            # 步驟 3: 發布應用程式
+            # 步驟 3: 還原 NuGet 套件
+            - name: Restore dependencies
+              run: dotnet restore ${{ env.PROJECT_NAME }}/${{ env.PROJECT_NAME }}.csproj
+              working-directory: ${{ github.workspace }}
+
+            # 步驟 4: 發布應用程式
             - name: Publish application
               run: dotnet publish ${{ env.PROJECT_NAME }}/${{ env.PROJECT_NAME }}.csproj --configuration ${{ env.BUILD_CONFIGURATION }} --output ./publish --no-restore
               working-directory: ${{ github.workspace }}
