1. Fix Docker build: add load parameter, fix Dockerfile paths, create simple test workflow.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -365,6 +365,8 @@ jobs:
                       DOTNET_LANG_INPUTFILE=zh_TW
                       DOTNET_LANG_CHARMAP=UTF-8
                       DEBIAN_FRONTEND=noninteractive
+                  # 平台：指定建置平台
+                  platforms: linux/amd64
 
     # 安全性掃描作業
     security-scan:
