--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ full_structure.txt
 Refactoring
 .github/*.md
 BestStoreMVC_Tutorial.md
+obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+obj/project.assets.json
+obj/project.nuget.cache
