1. 新增使用者匯入匯出功能。

--- a/BestStoreMVC/appsettings.json
+++ b/BestStoreMVC/appsettings.json
@@ -4,9 +4,9 @@
         // 這是給 Docker 訪問本地端的 MSSQL 用的連線字串
         // "DefaultConnection": "Server=host.docker.internal;Database=BestStoreDb;User Id=sa;Password=Seraph964375;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
         // 這是給 Docker 訪問容器內的 MSSQL 用的連線字串
-        "DefaultConnection": "Server=mssql,1433;Database=BestStoreDb;User Id=sa;Password=Seraph964375;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
+        // "DefaultConnection": "Server=mssql,1433;Database=BestStoreDb;User Id=sa;Password=Seraph964375;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
         // 這是給本地端訪問容器內的 MSSQL 用的連線字串
-        // "DefaultConnection": "Server=.,1436;Database=BestStoreDb;User Id=sa;Password=Seraph964375;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=.,1436;Database=BestStoreDb;User Id=sa;Password=Seraph964375;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
     },
     "Logging": {
         "LogLevel": {
@@ -31,13 +31,13 @@
     },
     // 憑證配置已移除，網站將使用 HTTP 模式運行
     // 如需啟用 HTTPS，請取消註解以下配置並確保憑證檔案存在
-    "Kestrel": {
-        "Certificates": {
-          "Default": {
-            "Path": "/deploy/BestStoreMVC/https/BestStore.pfx",
-            "Password": "Seraph964375"
-          }
-        }
-    },
+     //"Kestrel": {
+     //    "Certificates": {
+     //        "Default": {
+     //            "Path": "/deploy/BestStoreMVC/https/BestStore.pfx",
+     //            "Password": "Seraph964375"
+     //        }
+     //    }
+     //},
     "AllowedHosts": "*"
 }
