--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
                 - DOTNET_LANG_NAME=${DOTNET_LANG_NAME}
                 - DOTNET_LANG_INPUTFILE=${DOTNET_LANG_INPUTFILE}
                 - DOTNET_LANG_CHARMAP=${DOTNET_LANG_CHARMAP}
-                - DOTNET_DEBIAN_FRONTEND=${DEBIAN_FRONTEND}
+                - DOTNET_DEBIAN_FRONTEND=${DOTNET_DEBIAN_FRONTEND}
                 - DOTNET_TIME_ZONE=${DOTNET_TIME_ZONE}
         image: ${CONTAINER_AUTHOR}/${PROJECT_NAME}/dotnet:${DOTNET_IMAGE_VERSION}
         container_name: ${PROJECT_NAME}_web
